--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "WideGPT",
-  "version": "1.0",
+  "version": "1.1",
   "description": "Scale GPT output to 100% width",
   "permissions": [
     "activeTab"
@@ -9,7 +9,7 @@
   "content_scripts": [
     {
       "matches": [
-        "*://*.openai.com/*"
+        "*://*.chatgpt.com/*"
       ],
       "js": [
         "content.js"
