--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "WideGPT",
-  "version": "1.1",
-  "description": "Scale GPT output to 100% width",
+  "version": "1.2",
+  "description": "Scale Chat-GPT output to 100% width.",
   "permissions": [
     
   ],
