Add plugin ID to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "WideGPT",
   "version": "1.3",
   "description": "Scale Chat-GPT output to 100% width.",
+  "browser_specific_settings": {
+    "gecko": {
+      "id":"{354273a1-bbac-450b-95d2-10700836bba2}"
+    }
+  },
   "permissions": [
     
   ],
