--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,14 @@
 {
   "manifest_version": 3,
   "name": "WideGPT",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "Scale Chat-GPT output to 100% width.",
   "browser_specific_settings": {
     "gecko": {
       "id": "{354273a1-bbac-450b-95d2-10700836bba2}"
     }
   },
-  "permissions": [
-    "storage"
-  ],
+  "permissions": ["storage"],
   "action": {
     "default_popup": "popup.html"
   },
@@ -19,12 +17,8 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "*://*.chatgpt.com/*"
-      ],
-      "js": [
-        "content.js"
-      ]
+      "matches": ["*://*.chatgpt.com/*"],
+      "js": ["content.js"]
     }
   ]
 }
